erDiagram
    USERS {
        bigint id PK
        string email
    }

    PRODUCTS {
        bigint id PK
        string name
    }

    ORDERS {
        bigint id PK
        string code
    }

    REVIEWS {
        bigint id PK
        bigint user_id FK
        bigint product_id FK
        bigint order_id FK
        int rating
        text content
        boolean hidden
    }

    REVIEW_IMAGES {
        bigint id PK
        bigint review_id FK
        string image_url
    }

    REVIEW_REPORTERS {
        bigint review_id FK
        bigint user_id FK
    }

    SUPPORT_TICKETS {
        bigint id PK
        bigint processed_by_id FK
        string name
        string phone
        string email
        string subject
        text message
        string status
        text internal_note
        text reply_message
        datetime resolved_at
    }

    AUDIT_LOGS {
        bigint id PK
        bigint actor_user_id
        string target_type
        bigint target_id
        string action
        string description
        text old_value
        text new_value
        string ip_address
        string user_agent
        datetime created_at
    }

    USERS ||--o{ REVIEWS : "writes"
    PRODUCTS ||--o{ REVIEWS : "receives"
    ORDERS ||--o{ REVIEWS : "review source"

    REVIEWS ||--o{ REVIEW_IMAGES : "has images"
    REVIEWS ||--o{ REVIEW_REPORTERS : "reported by"
    USERS ||--o{ REVIEW_REPORTERS : "reports"

    USERS ||--o{ SUPPORT_TICKETS : "processes"